# cachix-deploy-amis

./: .gitignore  README.md  amis.json  main.tf
.github/workflows/: ci.yml
upload/: README.md  deploy_ami.py  devenv.nix  flake.nix  main.tf  pyproject.toml  randomhost.nix  run  updated_amis.json
upload/modules/: copy-ami.tf
upload/modules/copy-ami/: main.tf
upload/modules/copy_ami/: main.tf
